--- a/src/components/footer-creative/footer-creative.scss
+++ b/src/components/footer-creative/footer-creative.scss
@@ -34,14 +34,16 @@
     }
     width: 1.5rem;
     height: 1.5rem;
-  }
-  &__twitter {
-    background: url(./img/twitter.svg) no-repeat center;
-  }
-  &__facebook {
-    background: url(./img/facebook.svg) no-repeat center;
-  }
-  &__instagram {
-    background: url(./img/instagram.svg) no-repeat center;
+    &_type {
+      &_twitter {
+        background: url(./img/twitter.svg) no-repeat center;
+      }
+      &_facebook {
+        background: url(./img/facebook.svg) no-repeat center;
+      }
+      &_instagram {
+        background: url(./img/instagram.svg) no-repeat center;
+      }
+    }
   }
 }
