--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -105,6 +105,12 @@
     cursor: pointer;
     outline: none;
     transition: color 0.2s, border-color 0.2s, box-shadow 0.1s;
+    &_type {
+      &_minus {
+        margin-left: auto;
+        margin-right: 2rem;
+      }
+    }
     &:disabled {
       color: $color-main-1;
       border-color: $color-main-1;
@@ -117,10 +123,6 @@
     &:active:enabled {
       box-shadow: inset 0 0px 7px 3px #101013;
     }
-  }
-  &__minus {
-    margin-left: auto;
-    margin-right: 2rem;
   }
   &__count {
     position: absolute;
