--- a/src/components/footer-creative/footer-creative.pug
+++ b/src/components/footer-creative/footer-creative.pug
@@ -8,6 +8,6 @@ mixin footer-creative()
         +toxin-logo()
       .footer-creative__text Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
       .footer-creative__icons
-        a(href="https://twitter.com", target="_blank", rel="noopener noreferrer").footer-creative__twitter.footer-creative__icon
-        a(href="https://www.facebook.com", target="_blank", rel="noopener noreferrer").footer-creative__facebook.footer-creative__icon
-        a(href="https://www.instagram.com", target="_blank", rel="noopener noreferrer").footer-creative__instagram.footer-creative__icon
+        a(href="https://twitter.com", target="_blank", rel="noopener noreferrer").footer-creative__icon.footer-creative__icon_type_twitter
+        a(href="https://www.facebook.com", target="_blank", rel="noopener noreferrer").footer-creative__icon.footer-creative__icon_type_facebook
+        a(href="https://www.instagram.com", target="_blank", rel="noopener noreferrer").footer-creative__icon.footer-creative__icon_type_instagram
