--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -3,7 +3,7 @@ include ../button/button.pug
 
 mixin header({ navbar, userName, buttonLogin, buttonRegister })
 
-  .header
+  .header.js-header
     .header__wrapper
       .header__content
         .header__toxin-logo
