--- a/src/pages/websitePages/landing-page/landing-page.pug
+++ b/src/pages/websitePages/landing-page/landing-page.pug
@@ -12,6 +12,6 @@ block title
 block content
   main.landing-page__image
     .landing-page__wrapper
-      .landing-page__search-room-card
+      .landing-page__search-room-card.js-landing-page__search-room-card
         +search-room-card()
       .landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
