--- a/src/pages/websitePages/registration/registration.pug
+++ b/src/pages/websitePages/registration/registration.pug
@@ -11,5 +11,5 @@ block title
 
 block content
   main.registration__image
-    .registration__sign-up-card
+    .registration__sign-up-card.js-registration__sign-up-card
       +sign-up-card()
