--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -45,23 +45,23 @@ block content
         +text-field({ type: 'text', title: 'text field', placeholder: 'Email' })
       .form-elements__field-focus
         +text-field({ type: 'text', title: 'text field', value: 'This is pretty awesome' })
-      .form-elements__dropdown.form-elements__dropdown_pos_left
+      .form-elements__dropdown.form-elements__dropdown_pos_left.js-form-elements__dropdown
         +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
-      .form-elements__masked-field
+      .form-elements__masked-field.js-form-elements__masked-field
         +masked({ title: 'masked text field' })
-      .form-elements__date-dropdown
+      .form-elements__date-dropdown.js-form-elements__date-dropdown
         +date-dropdown({ title1: 'date dropdown', title2: 'date dropdown' })
-      .form-elements__filter-date
+      .form-elements__filter-date.js-form-elements__filter-date
         +filter-date({ title: 'filter date dropdown' })
       .form-elements__subscription
         +subscription({ title: 'subscription text field', placeholder: 'Email', isRequired: true })
-      .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small
+      .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small.js-form-elements__dropdown
         +dropdown({ title: 'dropdown', elements: consts.roomDropdown, resultDefault: 'Сколько комнат' })
-      .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small.form-elements__dropdown_expanded
+      .form-elements__dropdown.form-elements__dropdown_pos_left.form-elements__dropdown_size_small.form-elements__dropdown_expanded.js-form-elements__dropdown
         +dropdown({ title: 'dropdown', elements: consts.roomDropdown, resultDefault: 'Сколько комнат', isExpanded: true })
-      .form-elements__expandable-checkbox
+      .form-elements__expandable-checkbox.js-form-elements__expandable-checkbox
         +expandable-checkbox({ title: 'expandable checkbox list', checkboxList: consts.checkboxesToList })
-      .form-elements__expandable-checkbox.form-elements__expandable-checkbox_expanded
+      .form-elements__expandable-checkbox.form-elements__expandable-checkbox_expanded.js-form-elements__expandable-checkbox
         +expandable-checkbox({ title: 'expandable checkbox list', checkboxList: consts.checkboxesToList, isExpanded: true })
       .form-elements__abouts-room
         +abouts-room({ roomDetails: consts.roomDetailsInFormEl })
@@ -83,22 +83,22 @@ block content
       .form-elements__toggle
         +toggle({ label: 'Получать спецпредложения' })
       .form-elements__text.form-elements__text_place_in-like-button like button
-      .form-elements__like-button
+      .form-elements__like-button.js-form-elements__like-button
         +like-button({ count: '2' })
-      .form-elements__like-button
+      .form-elements__like-button.js-form-elements__like-button
         +like-button({ count: '12', isLiked: true })
       .form-elements__text.form-elements__text_place_in-rate-button rate button
       .form-elements__rate-button
         +rate-button({ activeStars: '4' })
       .form-elements__rate-button
         +rate-button({ activeStars: '5' })
-      .form-elements__dropdown.form-elements__dropdown_pos_mid
+      .form-elements__dropdown.form-elements__dropdown_pos_mid.js-form-elements__dropdown
         +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__text.form-elements__text_place_in-rich-checkbox rich checkbox buttons
       .form-elements__rich-checkbox
         +rich-checkbox({ richCheckboxes: consts.richCheckboxes })
     .form-elements__column_pos_right
-      .form-elements__range-slider
+      .form-elements__range-slider.js-form-elements__range-slider
         +range-slider({ title: 'range slider' })
       .form-elements__text.form-elements__text_place_in-buttons buttons
       .form-elements__button.form-elements__button_color_purple
@@ -118,12 +118,12 @@ block content
       .form-elements__text.form-elements__text_place_in-pagination pagination
       .form-elements__pagination
         +pagination({ current: 1, last: 15, caption: '1 - 12 из 100+ вариантов аренды' })
-      .form-elements__dropdown.form-elements__dropdown_pos_right
+      .form-elements__dropdown.form-elements__dropdown_pos_right.js-form-elements__dropdown
         +dropdown({ title: 'dropdown', elements: consts.dropdownRightInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__text.form-elements__text_place_in-bullet-list bullet list
       .form-elements__bullet-list
         +bullet-list({ bulletList: consts.bulletList })
-    .form-elements__comment
+    .form-elements__comment.js-form-elements__comment
       +comment({ avatar: 'avatar1.jpg', name: 'Мурад Сарафанов', dateText: '5 дней назад', likeButton: { count: 12, isLiked: true }, text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.' })
 
 block footer
