--- a/src/pages/ui-kit/headers-footers/headers-footers.pug
+++ b/src/pages/ui-kit/headers-footers/headers-footers.pug
@@ -22,9 +22,9 @@ block content
     .headers-footers__wrapper_for-logo
       +logo
   .headers-footers__content
-    .headers-footers__header
+    .headers-footers__header.js-headers-footers__header
       +header({ navbar: consts.navbarInHeaderEn, buttonLogin: 'login', buttonRegister: 'register' })
-    .headers-footers__header.headers-footers__header_logged-in
+    .headers-footers__header.headers-footers__header_logged-in.js-headers-footers__header
       +header({ navbar: consts.navbarInHeaderEn, userName: 'Cosmin Negoita' })
     .headers-footers__footer
       +footer({ footerText: 'Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.', menu: consts.footerMenuEn, subscriptionTitle: 'Subscribe to our newsletter', subscriptionText: 'Receive our latest news and promotions in your inbox!', copyright: 'Copyright © 2018 Toxin UI Kit. All rights reserved.' })
