--- a/src/pages/websitePages/search-room/search-room.scss
+++ b/src/pages/websitePages/search-room/search-room.scss
@@ -30,8 +30,15 @@
   &__filter-date {
     margin-bottom: 20px;
   }
-  &__guest-dropdown {
-    margin-bottom: 30px;
+  &__dropdown {
+    &_type {
+      &_guest {
+        margin-bottom: 30px;
+      }
+      &_room {
+        margin-bottom: 15px;
+      }
+    }
   }
   &__range-slider {
     margin-bottom: 8px;
@@ -57,9 +64,6 @@
   }
   &__rich-checkbox {
     margin-bottom: 30px;
-  }
-  &__room-dropdown {
-    margin-bottom: 15px;
   }
   &__title {
     font-family: $font-secondary-reserve;
