--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -76,7 +76,7 @@
   &__subscription-field {
     width: 100%;
   }
-  &__copyright{
+  &__copyright {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -91,27 +91,10 @@
       justify-content: center;
     }
   }
-  &__icon {
-    margin-right: 20px;
-    &:last-child {
-      margin-right: 0;
-    }
-    width: 1.5rem;
-    height: 1.5rem;
-    &_type {
-      &_twitter {
-        margin-left: auto;
-        @media (max-width: 444px) {
-          margin-left: initial;
-        }
-        background: url(./img/twitter.svg) no-repeat center;
-      }
-      &_facebook {
-        background: url(./img/facebook.svg) no-repeat center;
-      }
-      &_instagram {
-        background: url(./img/instagram.svg) no-repeat center;
-      }
+  &__social-media {
+    margin-left: auto;
+    @media (max-width: 444px) {
+      margin-left: initial;
     }
   }
 }
