--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -2,11 +2,11 @@ mixin pagination({ current, last, caption })
 
   .pagination
     .pagination__wrapper
-      .pagination__item.pagination__item_type_current= current
-      a(href="/mock-address").pagination__item.pagination__item_type_link #{+current + 1}
-      a(href="/mock-address").pagination__item.pagination__item_type_link #{+current + 2}
-      .pagination__item.pagination__item_type_dots ...
-      a(href="/mock-address").pagination__item.pagination__item_type_link= last
-      a(href="/mock-address").pagination__item.pagination__item_type_button arrow_forward
+      .pagination__link= current
+      a(href="/mock-address").pagination__link #{+current + 1}
+      a(href="/mock-address").pagination__link #{+current + 2}
+      .pagination__dots ...
+      a(href="/mock-address").pagination__link= last
+      a(href="/mock-address").pagination__button arrow_forward
     .pagination__caption= caption
     
