--- a/src/components/abouts-room/abouts-room.pug
+++ b/src/components/abouts-room/abouts-room.pug
@@ -7,5 +7,5 @@ mixin abouts-room({ roomDetails })
       .about-room
         .about-room__icon= materIcon
         .about-room__wrapper
-          p.about-room__text.about-room__text_type_title= title
-          p.about-room__text.about-room__text_type_description= description
+          p.about-room__text.about-room__text_bold= title
+          p.about-room__text= description
