--- a/src/components/block-color/block-color.scss
+++ b/src/components/block-color/block-color.scss
@@ -44,13 +44,9 @@
   &__text {
     margin: 0;
     font-family: $font-secondary;
-    &_type {
-      &_name {
-        font-weight: bold;
-      }
-      &_rgb {
-        font-weight: normal;
-      }
+    font-weight: normal;
+    &_bold {
+      font-weight: bold;
     }
   }
 }
