--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -80,16 +80,17 @@
     @media (max-width: 760px) {
       font-size: 20px;
     }
-    &_place {
-      &_in-submenu {
-        padding: 5px 2px;
-        @media (max-width: 760px) {
-          position: initial;
-          box-shadow: none;
-          padding: 0 7px;
-          margin: 15px 0 0px 0;
-        }
-      }
+  }
+  &__submenu-text {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    color: $color-main-50;
+    text-decoration: none;
+    padding: 5px 2px;
+    @media (max-width: 760px) {      
+      font-size: 20px;
+      padding: 0 7px;
+      margin: 15px 0 0px 0;
     }
   }
   &__arrow {
@@ -161,16 +162,14 @@
     }
   }
   &__button {
+    &:first-child {
+      margin-right: 20px;
+      position: relative;
+    }
     @media (max-width: 1000px) {
       padding: 10px;
       margin: 0 5px;
       border-bottom: 1px solid $color-main-1;
-    }
-    &_type {
-      &_login {
-        margin-right: 20px;
-        position: relative;
-      }
     }
   }
   &__burger {
