--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
   }
-  &__item {
+  &__link {
     width: 2.5rem;
     font-size: 0.75rem;
     line-height: 2.5rem;
@@ -14,39 +14,47 @@
     text-align: center;
     border-radius: 22px;
     user-select: none;
-    &_type {
-      &_current {
-        opacity: 1;
-        font-weight: bold;
-        color: white;
+    cursor: pointer;
+    text-decoration: none;
+    &:hover {
+      background-image: linear-gradient(180deg, rgba(188, 156, 255, 0.4) 0%, rgba(139, 164, 249, 0.4) 100%);
+    }
+    &:first-child {
+      cursor: default;
+      font-weight: bold;
+      color: white;
+      background: $color-secondary-gradient;
+      &:hover {
         background: $color-secondary-gradient;
-        cursor: default;
-      }
-      &_link {
-        cursor: pointer;
-        text-decoration: none;
-        &:hover {
-          background-image: linear-gradient(180deg, rgba(188, 156, 255, 0.4) 0%, rgba(139, 164, 249, 0.4) 100%);
-        }
-      }
-      &_dots {
-        cursor: default;
-      }
-      &_button {
-        cursor: pointer;
-        text-decoration: none;
-        font-family: $material-icons;
-        color: white;
-        background: $color-tertiary-gradient;
-        font-size: 1.5rem;
-        opacity: 0.7;
-        transition: opacity 0.4s;
-        &:hover {
-          opacity: 1;
-        }
       }
     }
-    
+  }
+  &__dots {
+    width: 2.5rem;
+    font-size: 0.75rem;
+    line-height: 2.5rem;
+    color: $color-main-50;
+    text-align: center;
+    border-radius: 22px;
+    user-select: none;
+  }
+  &__button {
+    width: 2.5rem;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    font-family: $material-icons;
+    color: white;
+    background: $color-tertiary-gradient;
+    text-align: center;
+    border-radius: 22px;
+    user-select: none;
+    cursor: pointer;
+    text-decoration: none;
+    opacity: 0.7;
+    transition: opacity 0.4s;
+    &:hover {
+      opacity: 1;
+    }
   }
   &__caption {
     font-size: 0.875rem;
