--- a/src/pages/websitePages/search-room/search-room.pug
+++ b/src/pages/websitePages/search-room/search-room.pug
@@ -25,7 +25,7 @@ block content
         section.search-room__filters
           .search-room__filter-date.js-search-room__filter-date
             +filter-date({ title: 'даты пребывания в отеле' })
-          .search-room__dropdown.search-room__dropdown_type_guest.js-search-room__dropdown
+          .search-room__guest-dropdown.js-search-room__dropdown
             +dropdown({ title: 'гости', elements: consts.guestDropdown, resultDefault: 'Сколько гостей' })
           .search-room__range-slider.js-search-room__range-slider
             +range-slider({ title: 'диапазон цены' })
@@ -41,7 +41,7 @@ block content
           .search-room__text доступность
           .search-room__rich-checkbox
             +rich-checkbox({ richCheckboxes: consts.richCheckboxes })
-          .search-room__dropdown.search-room__dropdown_type_room.js-search-room__dropdown
+          .search-room__room-dropdown.js-search-room__dropdown
             +dropdown({ title: 'удобства номера', elements: consts.roomDropdown, resultDefault: 'Сколько комнат' })
           .search-room__expandable-checkbox.js-search-room__expandable-checkbox
             +expandable-checkbox({ title: 'дополнительные удобства', checkboxList: consts.checkboxesToList })
